deal if ag_manager_new_for_service_type() returns NULL

Looks like it may happen because of Ubuntu's apparmor policy. We can't do much
in this case but best to not crash MC at least.

https://bugzilla.gnome.org/show_bug.cgi?id=685498